2005-01-13  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (clean-local): Rename from 'clean' so as not to step
	on automake's toes.

Tue Dec 7 11:44:39 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c, objectc.cs: handle large structs passed by value
	(fixes bug #69972).

2004-11-29  Zoltan Varga  <vargaz@freemail.hu>

	* cpu-sparc.md mini-sparc.c (long_conv_to_ovf_i): Fill missing delay slot.
	Fixes #69929.

2004-11-24  Zoltan Varga  <vargaz@freemail.hu>

	* mini.c (mono_method_to_ir): Disable inlining for methods containing
	localloc. Fixes #69678.

	* iltests.il (test_0_localloc_inline): Add regression test for #69678.
	
Fri Nov 19 14:54:07 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: adjust initial prolog size (bug #69691).

2004-11-18  Zoltan Varga  <vargaz@freemail.hu>

	* cpu-pentium.md (localloc): Increase max instruction len. Fixes
	#69664.

2004-11-03  Sebastien Pouliot  <sebastien@ximian.com>

	* mini.c: Fix pointer overwrite in mini_method_compile.

2004-11-02  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (get_spec): Allow tracing of classes without a namespace.

2004-11-2  Geoff Norton  <gnorton@customerdna.com>

        * inssel-ppc.brg (OP_OUTARG_VT (CEE_LDOBJ (base))):
        The darwin ABI needs some special handling for 1 and 2 byte structs
        Lets use lbz/lhz instead of lwz everywhere.
        * mini-ppc.c (calculate_sizes):  The Darwin ABI needs from special handling
        for 1 and 2 byte structs and struct which are size >= 3 || size % 4 != 0.
        Use stb/sth for the former, and put the latter always on stack instead of in
        argument registers.

2004-10-30  Zoltan Varga  <vargaz@freemail.hu>

	* trace.c (is_filenamechar): Add '_'.

2004-10-15  Geoff Norton  <gnorton@customerdna.com>

	* mini-ppc.c (calculate_sizes): Marshal valuetypes for pinvoke
        methods as their native size, fixed bug #57543, #57545.
	* mini-ppc.c (mono_arch_output_basic_block): Use mulli for imm16 types