@@ -141,7 +141,7 @@ mono_arch_get_restore_context (void)
 	/* restore_contect (struct sigcontext *ctx) */
 	/* we do not restore X86_EAX, X86_EDX */
 
-	start = code = g_malloc (1024);
+	start = code = mono_global_codeman_reserve (1024);
 	
 	/* load ctx */
 	x86_mov_reg_membase (code, X86_EAX, X86_ESP, 4, 4);
@@ -175,7 +175,7 @@ mono_arch_get_restore_context (void)
 gpointer
 mono_arch_get_call_filter (void)
 {
-	static guint8 start [64];
+	static guint8 *start;
 	static int inited = 0;
 	guint8 *code;
 
@@ -184,7 +184,7 @@ mono_arch_get_call_filter (void)
 
 	inited = 1;
 	/* call_filter (struct sigcontext *ctx, unsigned long eip) */
-	code = start;
+	code = start = mono_global_codeman_reserve (64);
 
 	x86_push_reg (code, X86_EBP);
 	x86_mov_reg_reg (code, X86_EBP, X86_ESP, 4);
@@ -269,7 +269,7 @@ throw_exception (unsigned long eax, unsigned long ecx, unsigned long edx, unsign
 gpointer 
 mono_arch_get_throw_exception (void)
 {
-	static guint8 start [24];
+	static guint8 *start;
 	static int inited = 0;
 	guint8 *code;
 
@@ -277,7 +277,7 @@ mono_arch_get_throw_exception (void)
 		return start;
 
 	inited = 1;
-	code = start;
+	code = start = mono_global_codeman_reserve (24);
 
 	x86_push_reg (code, X86_ESP);
 	x86_push_membase (code, X86_ESP, 4); /* IP */
@@ -312,7 +312,7 @@ mono_arch_get_throw_exception (void)
 gpointer 
 mono_arch_get_throw_exception_by_name (void)
 {
-	static guint8 start [32];
+	static guint8 *start;
 	static int inited = 0;
 	guint8 *code;
 
@@ -320,7 +320,7 @@ mono_arch_get_throw_exception_by_name (void)
 		return start;
 
 	inited = 1;
-	code = start;
+	code = start = mono_global_codeman_reserve (32);
 
 	x86_push_membase (code, X86_ESP, 4); /* exception name */
 	x86_push_imm (code, "System");
